src/taskpane/taskpane.css
* {
  font-size: 12px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  letter-spacing: 0.5px;
}

*, ::after, ::before {
  box-sizing: border-box;
  align-self: center !important;
}
.btn {
  font-size: 12px;
}

.btn-check:focus+.btn,
.btn:focus {
  box-shadow: none !important;
}

.btn-check:active+.btn-dark,
.btn-check:checked+.btn-dark,
.btn-dark.active,
.btn-dark:active,
.show>.btn-dark.dropdown-toggle {
  border-bottom: 2px solid #4098fe !important;
}

.hr {
  margin: 1rem 0;
  color: inherit;
  border: 0;
  border-top: 1px solid #E5E5E5;
  opacity: 1;
}

/* Adjust the dropdown button to allow text wrapping and keep the icon on the right */
.dropdown-toggle-sources {
  height: auto; /* Allow dynamic height based on content */
  min-height: 30px; /* Set a minimum height */
}

.dropdown-toggle-icon-s ::after{
  align-self: center;
}

/* Style for the dropdown label that holds selected items */
.sourceDropdownLabel {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis; /* Ensure long texts are truncated */
  white-space: normal; /* Allow wrapping of text */
  max-width: 100%; /* Prevent overflow */
}



.w-90 {
  width: 90%;
}

.w-95 {
  width: 95%;
}

.dynamic-height {
  height: auto !important;
  min-height: 34px;
  overflow: hidden;
  resize: none;
}

.user {
  background-color: #f1f1f1;
  text-align: justify;
}

.ai-reply {
  text-align: justify;
}

.ai-selected-reply {
  background-color: #d8feda;
}

.accordion,
.accordion-item {
  position: relative !important;
}

.accordion-header {
  background: lightgray;
  position: sticky !important;
  top: 0;
  border-bottom: 1px solid #d3d3d3;
  z-index: 1000;
}

.radio-select {
  align-content: space-around;
}

.chatbox {
  background-color: #e7f1f9;
}

/* 
* Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
* See LICENSE in the project root for license information.
*/

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

ul {
  margin: 0;
  padding: 0;
}

.ms-welcome__header {
  display: flex;
  justify-content: center;
  padding: 2rem;
  gap: 10px;
  margin-bottom: 2rem;
}

#app-body {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.c-pointer {
  cursor: pointer;
}

#button-container {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

#loader {
  display: flex;
  justify-content: center;
}

.box-loader .loader {
  position: absolute;
  top: 165px;
  z-index: 1000;
}

.box {
  border: 1px solid #ddd;
  border-radius: 4px;
  padding: 10px;
  background-color: #f9f9f9;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
  margin-bottom: 10px;
  width: 100%;
}

.box h3 {
  margin: 0;
  font-size: 12px;
  color: #0078d4;
}

.sub-box {
  border: 1px solid #ccc;
  border-radius: 4px;
  padding: 5px;
  margin-top: 5px;
  background-color: #ffffff;
}

.sub-box p {
  margin: 0;
  font-size: 12px;
  color: #333;
}

.loader {
  border: 10px solid #f3f3f3;
  border-radius: 50%;
  border-top: 10px solid #3498db;
  width: 100px;
  height: 100px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.card-container {
  overflow: auto;
  max-height: 80vh;
}

.logo {
  height: 3.3rem;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.logo-header {
  background-color: rgba(255, 255, 255, 0.8);
}

.fa-sign-out {
  position: relative !important;
}

.tooltiptext {
  visibility: hidden;
  min-width: 80px;
  background-color: #212529 !important;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  font-size: 12px;
  font-family: Arial, sans-serif;
  font-weight: 400;
  position: absolute;
  z-index: 1;
  right: 25px;
}

.ngb-tooltip:hover .tooltiptext {
  visibility: visible;
}

.fs-12 {
  font-size: 12px;
}

.bg-primary-clr {
  background-color: #3d82c9;
  border-color: #3d82c9;
}

.bg-danger-clr {
  background-color: #FF5370;
  border-color: #FF5370;
}

.bg-success-clr {
  background-color: #2ed8b6;
  border-color: #2ed8b6;
}

.bg-primary-clr:hover {
  background-color: #356ba5;
  border-color: #356ba5;
}

.bg-danger-clr:hover {
  background-color: #e04b63;
  border-color: #e04b63;
}

.bg-success-clr:hover {
  background-color: #4ddec1;
  border-color: #43dcbd;
}

.bg-primary-clr:active {
  background-color: #2e5a83;
  border-color: #2e5a83;
}

.bg-danger-clr:active {
  background-color: #ff758d;
  border-color: #ff758d;
}

.bg-success-clr:active {
  background-color: #58e0c5;
  border-color: #58e0c5;
}

.empty-format-checkbox-label {
  max-width: 21rem;
  margin-left: 1rem;
}

#sponsorDropdown {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#header-nav {
  position: sticky;
  top: 0;
  z-index: 1000;
}

.card-container {
  z-index: 0;
  position: relative;
}

#mention-dropdown {
  position: relative;
  display: none;
  z-index: 1000;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  width: 100%;
  max-height: 200px;
  overflow-y: auto;
  margin-top: 5px;
  max-width: 250px;
}

.list-group {
  overflow: auto;
  max-height: 300px;
}

.form-switch {
  padding-left: 3.5rem;
}

.footer {
  font-weight: 500;
  background-color: #dee2e6;
}

.mh-34{
  min-height: 33rem;
}

